--- a/test_validation_lib.ipynb
+++ b/test_validation_lib.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "85d5ac37",
    "metadata": {},
    "outputs": [
@@ -45,6 +45,7 @@
        "      <th>list nb</th>\n",
        "      <th>ordered list nb</th>\n",
        "      <th>list string</th>\n",
+       "      <th>à ignorer</th>\n",
        "      <th>llm test</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -59,6 +60,7 @@
        "      <td>6,9,7</td>\n",
        "      <td>6,9,7</td>\n",
        "      <td>hahaha,hehe</td>\n",
+       "      <td>1</td>\n",
        "      <td>i am 24 years old and Portuguese.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -71,6 +73,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>a,b,c,d,e,f</td>\n",
+       "      <td>0</td>\n",
        "      <td>i am hungry and it's impacting my judgement</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -83,6 +86,7 @@
        "      <td>1,2,3</td>\n",
        "      <td>1,2,3</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -95,6 +99,7 @@
        "      <td>5,0,6,45,679.65</td>\n",
        "      <td>5,0,6,45,679.65</td>\n",
        "      <td>sh,ch,sch,th,ph</td>\n",
+       "      <td>1</td>\n",
        "      <td>E. Coli was found in several meats across the supermarket's aisles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -107,6 +112,7 @@
        "      <td>12,9876,0.2</td>\n",
        "      <td>12,9876,0.2</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>b</td>\n",
        "      <td>98+42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -119,6 +125,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>OTRH,GJKO,hfhjz</td>\n",
+       "      <td>h</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -134,13 +141,13 @@
        "4            g      DEFRGHJ     0.84756      NaN                name   \n",
        "5      GgGgGzo          NaN    34.00000  D and C  bacillus, broccoli   \n",
        "\n",
-       "           list nb  ordered list nb      list string  \\\n",
-       "0            6,9,7            6,9,7      hahaha,hehe   \n",
-       "1              NaN              NaN      a,b,c,d,e,f   \n",
-       "2            1,2,3            1,2,3              NaN   \n",
-       "3  5,0,6,45,679.65  5,0,6,45,679.65  sh,ch,sch,th,ph   \n",
-       "4      12,9876,0.2      12,9876,0.2              NaN   \n",
-       "5              NaN              NaN  OTRH,GJKO,hfhjz   \n",
+       "           list nb  ordered list nb      list string à ignorer  \\\n",
+       "0            6,9,7            6,9,7      hahaha,hehe         1   \n",
+       "1              NaN              NaN      a,b,c,d,e,f         0   \n",
+       "2            1,2,3            1,2,3              NaN         0   \n",
+       "3  5,0,6,45,679.65  5,0,6,45,679.65  sh,ch,sch,th,ph         1   \n",
+       "4      12,9876,0.2      12,9876,0.2              NaN         b   \n",
+       "5              NaN              NaN  OTRH,GJKO,hfhjz         h   \n",
        "\n",
        "                                                             llm test  \n",
        "0                                   i am 24 years old and Portuguese.  \n",
@@ -183,6 +190,7 @@
        "      <th>list nb</th>\n",
        "      <th>ordered list nb</th>\n",
        "      <th>list string</th>\n",
+       "      <th>à ignorer</th>\n",
        "      <th>llm test</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -197,6 +205,7 @@
        "      <td>9,6,7</td>\n",
        "      <td>6,9,7</td>\n",
        "      <td>hahaha,hehe</td>\n",
+       "      <td>1</td>\n",
        "      <td>the person comes from an European country and is young.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -209,6 +218,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>a,b,c,d,e,f</td>\n",
+       "      <td>0</td>\n",
        "      <td>a fact about one's personality is described</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -221,6 +231,7 @@
        "      <td>3,1,2,3</td>\n",
        "      <td>1,2,3</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>9</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -233,6 +244,7 @@
        "      <td>0,6,45,679.65,5</td>\n",
        "      <td>5,0,6,45,679.65</td>\n",
        "      <td>sh,ch,sch,th,ph</td>\n",
+       "      <td>1</td>\n",
        "      <td>microbiological tests were conducted in a supermarket.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -245,18 +257,20 @@
        "      <td>12,9876,0.2,4</td>\n",
        "      <td>12,9876,0.2</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>h</td>\n",
        "      <td>140</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>GgGgGzo</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>34.00000</td>\n",
+       "      <td>35.00000</td>\n",
        "      <td>D and C</td>\n",
        "      <td>I want Bacillus in the broccoli</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>OTRH,GJKO,hfhjz</td>\n",
+       "      <td>k</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -270,7 +284,7 @@
        "2        à oui      sedrtyu    45.90000      1.2   \n",
        "3      OLALAla      ertyuaz  1000.00000        F   \n",
        "4            g      DEFRGHm     0.84756        O   \n",
-       "5      GgGgGzo          NaN    34.00000  D and C   \n",
+       "5      GgGgGzo          NaN    35.00000  D and C   \n",
        "\n",
        "                          Keywords          list nb  ordered list nb  \\\n",
        "0               the meat is cooked            9,6,7            6,9,7   \n",
@@ -280,13 +294,21 @@
        "4               What's your name ?    12,9876,0.2,4      12,9876,0.2   \n",
        "5  I want Bacillus in the broccoli              NaN              NaN   \n",
        "\n",
-       "       list string                                                 llm test  \n",
-       "0      hahaha,hehe  the person comes from an European country and is young.  \n",
-       "1      a,b,c,d,e,f              a fact about one's personality is described  \n",
-       "2              NaN                                                      NaN  \n",
-       "3  sh,ch,sch,th,ph   microbiological tests were conducted in a supermarket.  \n",
-       "4              NaN                                                      140  \n",
-       "5  OTRH,GJKO,hfhjz                                                      NaN  "
+       "       list string à ignorer  \\\n",
+       "0      hahaha,hehe         1   \n",
+       "1      a,b,c,d,e,f         0   \n",
+       "2              NaN         9   \n",
+       "3  sh,ch,sch,th,ph         1   \n",
+       "4              NaN         h   \n",
+       "5  OTRH,GJKO,hfhjz         k   \n",
+       "\n",
+       "                                                  llm test  \n",
+       "0  the person comes from an European country and is young.  \n",
+       "1              a fact about one's personality is described  \n",
+       "2                                                      NaN  \n",
+       "3   microbiological tests were conducted in a supermarket.  \n",
+       "4                                                      140  \n",
+       "5                                                      NaN  "
       ]
      },
      "metadata": {},
@@ -305,7 +327,10 @@
     "#/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/use_case_content/truth_table.xlsx\n",
     "#/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/use_case_content/compared_table.xlsx\n",
     "\n",
-    "table_truth, table_compared = reading_tables(\"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/use_case_content/truth_table.xlsx\",\"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/use_case_content/compared_table.xlsx\", display_tables=True)\n"
+    "table_truth, table_compared = reading_tables(\n",
+    "    \"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/use_case_content/truth_table.xlsx\",\n",
+    "    \"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/use_case_content/compared_table.xlsx\", \n",
+    "    display_tables=True)\n"
    ]
   },
   {
@@ -320,14 +345,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "de8a7fb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table truth: Glossary was applied to ['Nb']\n",
+      "Table compared: Glossary was applied to ['Nb']\n"
+     ]
+    }
+   ],
    "source": [
     "from validation_package import sort_data\n",
     "\n",
-    "table_truth, table_compared = sort_data(table_truth, table_compared, glossary=None)"
+    "table_truth, table_compared = sort_data(table_truth, table_compared, glossary={\"Nb\":{34:35}})"
    ]
   },
   {
@@ -348,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "665205ea",
    "metadata": {},
    "outputs": [
@@ -369,10 +403,11 @@
       "list_num_order - OrderedListColumnProcessor()\n",
       "list_words - List_of_Strings_ColumnProcessor()\n",
       "sentence - LLMColumnProcessor()\n",
-      "['String', 'string noisy', 'Nb', 'Bool', 'Keywords', 'list nb', 'ordered list nb', 'list string', 'llm test']\n",
-      "[<validation_package.classes.StringColumnProcessor object at 0x00000140C1A22660>, <validation_package.classes.StringNoisyColumnProcessor object at 0x00000140C1A22510>, <validation_package.classes.NumericColumnProcessor object at 0x00000140C1AA9950>, <validation_package.classes.BooleanListColumnProcessor object at 0x00000140C1A22270>, <validation_package.classes.KeywordListColumnProcessor object at 0x00000140C1A21BE0>, <validation_package.classes.ListColumnProcessor object at 0x00000140C1A21D30>, <validation_package.classes.OrderedListColumnProcessor object at 0x00000140C1A21E80>, <validation_package.classes.List_of_Strings_ColumnProcessor object at 0x00000140C1A212B0>, <validation_package.classes.LLMColumnProcessor object at 0x00000140C1A21940>]\n",
+      "['String', 'string noisy', 'Nb', 'Bool', 'Keywords', 'list nb', 'ordered list nb', 'list string', 'à ignorer', 'llm test']\n",
+      "[<validation_package.classes.StringColumnProcessor object at 0x000001DD56004980>, <validation_package.classes.StringNoisyColumnProcessor object at 0x000001DD56005550>, <validation_package.classes.NumericColumnProcessor object at 0x000001DD56088CD0>, <validation_package.classes.BooleanListColumnProcessor object at 0x000001DD560052B0>, <validation_package.classes.KeywordListColumnProcessor object at 0x000001DD56004D70>, <validation_package.classes.ListColumnProcessor object at 0x000001DD56004C20>, <validation_package.classes.OrderedListColumnProcessor object at 0x000001DD56005400>, <validation_package.classes.List_of_Strings_ColumnProcessor object at 0x000001DD56007B60>, <validation_package.classes.NumericColumnProcessor object at 0x000001DD560FF230>, <validation_package.classes.LLMColumnProcessor object at 0x000001DD56007CB0>]\n",
+      "Column 'Ã  ignorer' has been ignored for the validation.\n",
       "The manual attribution was taken into account.\n",
-      "{'String': <validation_package.classes.StringColumnProcessor object at 0x00000140C1A22660>, 'string noisy': <validation_package.classes.StringNoisyColumnProcessor object at 0x00000140C1A22510>, 'Nb': <validation_package.classes.NumericColumnProcessor object at 0x00000140C1AA9950>, 'Bool': <validation_package.classes.BooleanListColumnProcessor object at 0x00000140C1A22270>, 'Keywords': <validation_package.classes.KeywordListColumnProcessor object at 0x00000140C1A21BE0>, 'list nb': <validation_package.classes.ListColumnProcessor object at 0x00000140C1A21D30>, 'ordered list nb': <validation_package.classes.OrderedListColumnProcessor object at 0x00000140C1A21E80>, 'list string': <validation_package.classes.List_of_Strings_ColumnProcessor object at 0x00000140C1A212B0>, 'llm test': <validation_package.classes.LLMColumnProcessor object at 0x00000140C1A21940>}\n"
+      "{'String': <validation_package.classes.StringColumnProcessor object at 0x000001DD56004980>, 'string noisy': <validation_package.classes.StringNoisyColumnProcessor object at 0x000001DD56005550>, 'Nb': <validation_package.classes.NumericColumnProcessor object at 0x000001DD56088CD0>, 'Bool': <validation_package.classes.BooleanListColumnProcessor object at 0x000001DD560052B0>, 'Keywords': <validation_package.classes.KeywordListColumnProcessor object at 0x000001DD56004D70>, 'list nb': <validation_package.classes.ListColumnProcessor object at 0x000001DD56004C20>, 'ordered list nb': <validation_package.classes.OrderedListColumnProcessor object at 0x000001DD56005400>, 'list string': <validation_package.classes.List_of_Strings_ColumnProcessor object at 0x000001DD56007B60>, 'à ignorer': <validation_package.classes.NumericColumnProcessor object at 0x000001DD560FF230>, 'llm test': <validation_package.classes.LLMColumnProcessor object at 0x000001DD56007CB0>}\n"
      ]
     }
    ],
@@ -380,8 +415,9 @@
     "#manual attribution\n",
     "from validation_package import manual_process_for_columns_attribution\n",
     "\n",
-    "attribution_file1 = \"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/use_case_content/manual_attribution_ex.txt\"\n",
-    "processors = manual_process_for_columns_attribution(table_truth, attribution_file1)\n",
+    "attribution_file = \"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/use_case_content/manual_attribution_ex.txt\"\n",
+    "ignore_file = \"/Users/meltr/OneDrive/Documents/(APT2)/D4/STAGE/github/GenEval/use_case_content/ignore_columns.txt\"\n",
+    "processors = manual_process_for_columns_attribution(table_truth, attribution_file, ignore_file)\n",
     "print(processors)"
    ]
   },
@@ -454,14 +490,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "eb7ddf76",
    "metadata": {},
    "outputs": [],
    "source": [
     "from validation_package import comparison_init\n",
     "\n",
-    "comparison_results, confusion_matrices = comparison_init(table_truth, table_compared, processors)"
+    "comparison_results, confusion_matrices = comparison_init(table_truth, table_compared, processors, ignore_columns=[\"à ignorer\"])"
    ]
   },
   {
@@ -474,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "1bf6ffe4",
    "metadata": {},
    "outputs": [
@@ -557,7 +593,7 @@
        "      <td>Correct</td>\n",
        "      <td>i am 24 years old and Portuguese.</td>\n",
        "      <td>the person comes from an European country and is young.</td>\n",
-       "      <td>Incorrect</td>\n",
+       "      <td>Correct</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -687,8 +723,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Correct</td>\n",
-       "      <td>34.00000</td>\n",
-       "      <td>34.00000</td>\n",
+       "      <td>35.00000</td>\n",
+       "      <td>35.00000</td>\n",
        "      <td>Correct</td>\n",
        "      <td>D and C</td>\n",
        "      <td>D and C</td>\n",
@@ -728,7 +764,7 @@
        "2               sedrtyu                 Correct    45.90000     45.90000   \n",
        "3               ertyuaz               Incorrect  1000.00000   1000.00000   \n",
        "4               DEFRGHm                 Correct     0.84756      0.84756   \n",
-       "5                   NaN                 Correct    34.00000     34.00000   \n",
+       "5                   NaN                 Correct    35.00000     35.00000   \n",
        "\n",
        "  Nb_comparison Bool_truth Bool_compared Bool_comparison      Keywords_truth  \\\n",
        "0       Correct     A or B             A         Correct        meat, cooked   \n",
@@ -779,7 +815,7 @@
        "5                                                                 NaN   \n",
        "\n",
        "                                         llm test_compared llm test_comparison  \n",
-       "0  the person comes from an European country and is young.           Incorrect  \n",
+       "0  the person comes from an European country and is young.             Correct  \n",
        "1              a fact about one's personality is described           Incorrect  \n",
        "2                                                      NaN             Correct  \n",
        "3   microbiological tests were conducted in a supermarket.           Incorrect  \n",
@@ -895,20 +931,20 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>llm test</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.500000</td>\n",
+       "      <td>0.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Overall</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>10.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>0.722222</td>\n",
+       "      <td>0.740741</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -924,8 +960,8 @@
        "5          list nb      5.0        0.0             1.0             0.0   \n",
        "6  ordered list nb      4.0        2.0             0.0             0.0   \n",
        "7      list string      6.0        0.0             0.0             0.0   \n",
-       "8         llm test      3.0        3.0             0.0             0.0   \n",
-       "9          Overall     39.0       11.0             2.0             2.0   \n",
+       "8         llm test      4.0        2.0             0.0             0.0   \n",
+       "9          Overall     40.0       10.0             2.0             2.0   \n",
        "\n",
        "   Accuracy  \n",
        "0  0.833333  \n",
@@ -936,8 +972,8 @@
        "5  0.833333  \n",
        "6  0.666667  \n",
        "7  1.000000  \n",
-       "8  0.500000  \n",
-       "9  0.722222  "
+       "8  0.666667  \n",
+       "9  0.740741  "
       ]
      },
      "metadata": {},
@@ -954,7 +990,7 @@
    "source": [
     "from validation_package.get_results import results\n",
     "\n",
-    "combined_output, confusion_matrices_df = results(table_truth, table_compared, comparison_results, confusion_matrices, display_results=True)\n"
+    "combined_output, confusion_matrices_df = results(table_truth, table_compared, comparison_results, confusion_matrices, display_results=True, ignore_columns=[\"à ignorer\"])\n"
    ]
   }
  ],
